--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,3 +1,3 @@
 [plugins]
 algomate = { id = "org.tudalgo.algomate", version = "0.6.1" }
-
+style = { id = "org.sourcegrade.style", version = "3.0.0" }
